--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,8 @@
     "jsx-a11y/label-has-associated-control": "off",
     "react/no-typos": "off",
     "jsx-a11y/anchor-is-valid": "off",
-    "object-curly-newline": "off"
+    "object-curly-newline": "off",
+    "no-underscore-dangle": "off",
+    "comma-dangle": "off"
   }
 }
