--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "next": "12.0.7",
     "prop-types": "^15.8.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
