--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "aos": "^2.3.4",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.7",
     "prop-types": "^15.8.0",
     "react": "17.0.2",
