integration edit profile

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
     "comma-dangle": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "no-unneeded-ternary": "off"
   }
 }
